[tool.poetry]
name = "poetry init stepik-proj"
version = "0.1.0"
description = ""
authors = ["moroes <ivlievro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
